--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -24,4 +24,6 @@ peft==0.11.1
 accelerate==0.30.1
 bitsandbytes==0.42.0
 datasets==2.18.0
+unsloth
+torch
 dlabutils @ git+https://github.com/epfl-dlab/dlab-utils.git
