--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -24,7 +24,22 @@ peft==0.11.1
 accelerate==0.30.1
 bitsandbytes==0.42.0
 datasets==2.18.0
-unsloth
-torch
-huggingface_hub
+datasets==3.0.1
+deepdiff==8.0.1
+diskcache==5.6.3
+openai==1.54.4
+pandas==2.2.3
+pylatexenc==2.10
+pytest==8.3.3
+python-dotenv==1.0.1
+spacy==3.8.2
+sympy==1.13.1
+textstat==0.7.4
+tiktoken==0.7.0
+tokenizers==0.20.3
+torch==2.4.1
+torchtext==0.18.0
+transformers==4.46.1
+trl==0.11.1
+unsloth==2024.10.2
 dlabutils @ git+https://github.com/epfl-dlab/dlab-utils.git
