--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -1,45 +1,174 @@
-lightning
-nltk
-transformer_lens
-tokenizers
-torchdata
-lightning-bolts
-pytorch-ignite
-loguru
-hydra-core
-nnsight
-safetensors
-transformers
-datasets
-pyyaml
-wandb
-numpy
-scipy
-seaborn
-plotly
-tqdm
-matplotlib
-trl==0.8.3 
-peft==0.11.1 
-accelerate==0.30.1
-bitsandbytes==0.42.0
-datasets==2.18.0
+accelerate==1.0.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bitsandbytes==0.44.1
+bleach==6.2.0
+blis==1.0.1
+blobfile==3.0.0
+-e git+https://github.com/epfl-dlab/rewrite-and-simplify.git@ff731cdaae7932bf9eade2d82cac7188cc6fe5e5#egg=cachesaver&subdirectory=cache22
+catalogue==2.0.10
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+confection==0.1.5
+cymem==2.0.8
 datasets==3.0.1
+decorator==5.1.1
 deepdiff==8.0.1
+defusedxml==0.7.1
+dill==0.3.8
 diskcache==5.6.3
-openai==1.54.4
+distro==1.9.0
+docopt==0.6.2
+docstring_parser==0.16
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.1
+fire==0.7.0
+fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl#sha256=7d6ad14cd5078e53147bfbf70fb9d433c6a3865b695fda2657140bbc59a27e29
+frozenlist==1.4.1
+fsspec==2024.6.1
+h11==0.14.0
+hf_transfer==0.1.8
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.25.0
+idna==3.10
+iniconfig==2.0.0
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.6.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+langcodes==3.4.1
+language_data==1.2.0
+llama_models==0.0.47
+llama_stack==0.0.47
+lxml==5.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistral_common==1.4.4
+mistral_inference==1.5.0
+mistune==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+murmurhash==1.0.10
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+networkx==3.4.1
+numpy==2.0.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+openai==1.53.0
+orderly-set==5.2.2
+packaging==24.1
 pandas==2.2.3
-pylatexenc==2.10
+pandocfilters==1.5.1
+parso==0.8.4
+peft==0.13.2
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+platformdirs==4.3.6
+pluggy==1.5.0
+preshed==3.0.9
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==3.20.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pycryptodomex==3.21.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+pyphen==0.17.0
 pytest==8.3.3
+pytest-asyncio==0.24.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+rich==13.9.2
+rpds-py==0.21.0
+safetensors==0.4.5
+sentencepiece==0.2.0
+shellingham==1.5.4
+shtab==1.7.1
+simple-parsing==0.1.6
+six==1.16.0
+smart-open==7.0.5
+sniffio==1.3.1
+soupsieve==2.6
 spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+stack-data==0.6.3
 sympy==1.13.1
+termcolor==2.5.0
 textstat==0.7.4
+thinc==8.3.2
 tiktoken==0.7.0
-tokenizers==0.20.3
+tinycss2==1.4.0
+tokenizers==0.20.1
+tomli==2.0.2
 torch==2.4.1
-torchtext==0.18.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
 transformers==4.46.1
+triton==3.0.0
 trl==0.11.1
+typer==0.12.5
+typing_extensions==4.12.2
+tyro==0.8.13
+tzdata==2024.2
 unsloth==2024.10.2
-dlabutils @ git+https://github.com/epfl-dlab/dlab-utils.git
+unsloth_zoo==2024.10.4
+urllib3==2.2.3
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.1
+webencodings==0.5.1
+wrapt==1.16.0
+xformers==0.0.28.post1
+xxhash==3.5.0
+yarg==0.1.9
+yarl==1.15.5
