--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -24,6 +24,6 @@ accelerate==0.30.1
 bitsandbytes==0.42.0
 datasets==2.18.0
 spacy
-numpy==1.8.0
+numpy
 textstat
 dlabutils @ git+https://github.com/epfl-dlab/dlab-utils.git
