--- a/pytorch/requirements.txt
+++ b/pytorch/requirements.txt
@@ -26,4 +26,5 @@ datasets==2.18.0
 spacy
 numpy
 textstat
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 dlabutils @ git+https://github.com/epfl-dlab/dlab-utils.git
